--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ body {
     font-weight: bolder;
 }
 
+.button.button-outline {
+    color: teal;
+    background-color: white;
+}
 
 .button {
     border: 0.1rem solid teal;
@@ -60,4 +64,47 @@ h4 {
 .year-input{
     display: flex;
     justify-content: center;
+}
+
+svg {
+    background-color:white;
+}
+
+.tooltip {
+    position: absolute;
+    width: auto;
+    height: auto;
+    padding: 10px;
+    font-size: 12px;
+    color: white;
+    background-color: black;
+    opacity: 0.8;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    pointer-events: none;
+}
+
+.tooltip.hidden {
+    display: none;
+}
+
+.reset-button {
+    display: flex;
+    justify-content: center;
+}
+
+#state-name {
+    font-weight: bold;
+}
+
+label {
+    display: block;
+    text-align: center;
+    line-height: 150%;
+    font-size: .85em;
+}
+
+span {
+    margin-right: 20px;
 }
