--- a/style.css
+++ b/style.css
@@ -131,3 +131,13 @@ span {
 select {
     width: 15%;
 }
+
+#intl-line-chart{
+    width: 100%;
+    height: 300px;
+}
+
+
+.single-container{
+    margin-top: 30px;
+}
