--- a/style.css
+++ b/style.css
@@ -21,8 +21,6 @@ h4{
 }
 h3 {
     color:#8a100b;
-    
-
 }
 
 h5 {
@@ -101,12 +99,12 @@ svg {
     height: auto;
     padding: 10px;
     font-size: 12px;
-    color: white;
-    background-color: black;
-    opacity: 0.8;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    border-radius: 10px;
+    color:grey;
+    background-color: white;
+    opacity: 1;
+    border-radius: 5px;
+    border-color: lightgrey;
+    border: .5px solid;
     pointer-events: none;
 }
 
