--- a/style.css
+++ b/style.css
@@ -195,3 +195,11 @@ canvas {
 select[name=select_School] {
     width: 30%;
 }
+
+#map-comp{
+    text-align: center;
+    font-style: italic;
+    font-size: 19px;
+    color: black;
+
+}
