--- a/style.css
+++ b/style.css
@@ -217,6 +217,7 @@ select[name=select_School] {
 
 .button.contributions {
     width: 30%;
+    justify-content: center;
 }
 
 .button.back.contributions {
